src/objects/Client_Login__c.object
<CustomObject>
    <description>Store the client logins for variety of systems</description>
    <fields>
        <fullName>Account__c</fullName>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Client Logins</relationshipLabel>
        <relationshipName>Client_Logins</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <description>which system is this login for</description>
        <inlineHelpText>which system is this login for</inlineHelpText>
        <label>Type</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>note__c</fullName>
        <description>Some extra space for comment/note</description>
        <label>note</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>password__c</fullName>
        <label>password</label>
        <length>175</length>
        <maskChar>asterisk</maskChar>
        <maskType>all</maskType>
        <type>EncryptedText</type>
    </fields>
    <label>Client Login</label>
    <nameField>
        <label>Client Logins Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Client Logins</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>